--- a/App Interaktive Karte/index.html
+++ b/App Interaktive Karte/index.html
@@ -200,51 +200,31 @@
     <div id="sText"></div>
     <div class="actions" id="sLinks"></div>
   </div>
-  
+
+<script src="translations.js"></script>
+<script src="https://unpkg.com/@panzoom/panzoom/dist/panzoom.min.js"></script>
 <script>
   /* ====== STATE & SETTINGS ====== */
   let currentLang = 'de';
+  let panzoomInstance = null;
 
   const MAP_W = 1920, MAP_H = 1080;
   const isMobile = () => window.matchMedia('(max-width: 768px)').matches;
+
+  // 0 = linker Rand, 0.5 = Kartenmitte, 1 = rechter Rand
+  const START_X_PERCENT = 0.5;
 
   /* ====== DOM ====== */
   const wrapEl = document.getElementById('mapwrap');
   const mapEl  = document.getElementById('map');
 
-  // Wichtig: Karte darf transformiert werden
-  mapEl.style.transformOrigin = '0 0';
-
   function tLabel(cat){ return cat.label?.[currentLang] || cat.label?.de || ''; }
   function setLang(l){ currentLang=l; render(); }
 
-  /* ====== Fitting ohne Library (deterministisch) ====== */
-  function computeFit() {
-    const w = wrapEl.clientWidth;
-    const h = wrapEl.clientHeight;
-    const scale = Math.min(w / MAP_W, h / MAP_H);
-    const x = (w - MAP_W * scale) / 2;
-    const y = (h - MAP_H * scale) / 2;
-    return { scale, x, y };
-  }
-
-  function applyFit() {
-    const { scale, x, y } = computeFit();
-    // gesamte Karte sichtbar & zentriert, ohne Zoom-Spielereien
-    mapEl.style.transform = `translate(${x}px, ${y}px) scale(${scale})`;
-  }
-
-  // VisualViewport-Handling für Mobile-UI/Rotation/Keyboard
+  /* ====== Viewport-Helfer ====== */
   function setFullscreenVH() {
     const h = window.visualViewport ? window.visualViewport.height : window.innerHeight;
     document.documentElement.style.setProperty('--vh', `${h * 0.01}px`);
-  }
-  function onVVChange() {
-    const h = window.visualViewport ? window.visualViewport.height : window.innerHeight;
-    wrapEl.style.height = h + 'px';
-    setFullscreenVH();
-    // nach Layout einmal sauber fitten
-    requestAnimationFrame(applyFit);
   }
   function enableVHWatchers() {
     setFullscreenVH();
@@ -260,6 +240,34 @@
       visualViewport.removeEventListener('scroll', onVVChange);
     }
     window.removeEventListener('orientationchange', onVVChange);
+  }
+  function onVVChange() {
+    const h = window.visualViewport ? window.visualViewport.height : window.innerHeight;
+    wrapEl.style.height = h + 'px';
+    setFullscreenVH();
+    if (panzoomInstance) {
+      requestAnimationFrame(() => {
+        const t = panzoomInstance.getTransform();
+        const min = panzoomInstance.getOptions().minScale ?? 0;
+        if (Math.abs(t.scale - min) < 0.03) fitAndCenter(START_X_PERCENT);
+      });
+    }
+  }
+
+  /* ====== Fit-Funktionen ====== */
+  function computeFit(xPercent = START_X_PERCENT, yAlign = 'center') {
+    const rect = wrapEl.getBoundingClientRect();
+    const scale = Math.min(rect.width / MAP_W, rect.height / MAP_H);
+    const x = rect.width / 2 - (MAP_W * xPercent) * scale;           // gewünschter Kartenanteil mittig
+    const y = (yAlign === 'top') ? 0 : (rect.height - MAP_H * scale) / 2;
+    return { scale, x, y };
+  }
+
+  function fitAndCenter(xPercent = START_X_PERCENT) {
+    if (!panzoomInstance) return;
+    const { scale, x, y } = computeFit(xPercent);
+    panzoomInstance.setTransform({ x, y, scale });
+    panzoomInstance.setOptions({ minScale: scale });
   }
 
   /* ====== NAVIGATION ====== */
@@ -280,72 +288,118 @@
     if (imgEl.complete) cb();
     else imgEl.addEventListener('load', cb, { once: true });
   }
+  
+function getFocusFromURL() {
+  try {
+    const p = new URLSearchParams(location.search);
+    const hash = location.hash || '';
+    return p.get('focus') || (hash.startsWith('#pin-') ? decodeURIComponent(hash.slice(5)) : null);
+  } catch { return null; }
+}
+  
+function showMap(focusId = null){
+  document.getElementById('tab-map').classList.add('active');
+  document.getElementById('tab-list').classList.remove('active');
+  wrapEl.classList.add('active');
+  document.getElementById('list').style.display = 'none';
 
-  // Karte öffnen: Fullscreen setzen (mobil), dann deterministisch fitten
-  function showMap(){
-    document.getElementById('tab-map').classList.add('active');
-    document.getElementById('tab-list').classList.remove('active');
-    wrapEl.classList.add('active');
-    document.getElementById('list').style.display = 'none';
+  if (isMobile()) {
+    enterMapFullscreen();
+    setFullscreenVH();
+    wrapEl.style.height = (window.visualViewport?.height || window.innerHeight) + 'px';
+    enableVHWatchers();
+  }
 
-    if (isMobile()) {
-      enterMapFullscreen();
-      setFullscreenVH();
-      wrapEl.style.height = (window.visualViewport?.height || window.innerHeight) + 'px';
-      enableVHWatchers();
+  const mapImgEl = document.querySelector('.map-img');
+
+  waitForImage(mapImgEl, () => {
+    // Basis-Fit bestimmen (für minScale)
+    const fit = computeFit(START_X_PERCENT);
+    const minScale = fit.scale;
+
+    // Ziel bestimmen (falls übergeben/gesetzt)
+    const id = focusId || lastFocusId || null;
+    const targetScale = Math.max(2, minScale);
+    const targetTf = id ? computeTransformForPin(id, targetScale) : null;
+
+    if (!panzoomInstance) {
+      // Panzoom direkt mit der richtigen Start-Transform initialisieren
+      panzoomInstance = Panzoom(mapEl, {
+        maxScale: 4,
+        contain: 'outside',
+        startScale: targetTf ? targetTf.scale : fit.scale,
+        startX:    targetTf ? targetTf.x     : fit.x,
+        startY:    targetTf ? targetTf.y     : fit.y,
+        animate: true
+      });
+      wrapEl.addEventListener('wheel', (e) => {
+        e.preventDefault();
+        panzoomInstance.zoomWithWheel(e);
+      }, { passive: false });
+      panzoomInstance.setOptions({ minScale });
+    } else {
+      panzoomInstance.setOptions({ minScale });
+      // Falls ein Ziel übergeben wurde: sofort dort hin
+      if (targetTf) panzoomInstance.setTransform(targetTf);
+      else panzoomInstance.setTransform(fit);
     }
 
-    const mapImgEl = document.querySelector('.map-img');
-    waitForImage(mapImgEl, () => {
-      // zwei Frames warten -> garantiert, dass Layout/Fullscreen final ist
-      requestAnimationFrame(() => {
-        requestAnimationFrame(() => {
-          applyFit();  // exakt einmal fitten (keine weitere Logik)
-        });
-      });
-    });
-  }
+    // Visuelles Highlight am Ende setzen
+    if (id) highlightPin(id);
+  });
+}
 
   /* ====== LISTE & DATEN ====== */
-  const categories = [
-    { id:'kids', label:{de:'Kinder & Freizeit', en:'Kids & Leisure'},
-      areas: ['D3', 'Kruemelecke', 'L1', 'L2', 'M5', 'P5', 'Q1', 'Sandburg']},
-    { id:'health', label:{de:'Medizin & Hilfe', en:'Medical & Help'},
-      areas:['MedPoint','Sozialerdienst','VWG1','VWG2','VWG3'] },
-    { id:'services', label:{de:'Service & Info', en:'Services & Info'},
-      areas: ['Begleitdienst', 'Bistro', 'Checkin', 'Infopoint', 'Kleiderkammer', 'Post', 'Sprachmittlung', 'Waschsalon'] },
-    { id:'site', label:{de:'Gelände', en:'Site'},
-      areas:['Q','Krähenwald','WS','Bus','H'] }
-  ];
+const categories = [
+  // Kids / Freizeit
+  { id:'kids', label:{de:'Kinder & Freizeit', en:'Kids & Leisure'},
+  areas: ['D3', 'Kruemelecke', 'L1', 'L2', 'M5', 'P5', 'Q1', 'Sandburg']},
 
-  let lastFocusId = null;
-  let highlightedPinId = null;
+  // Medizin / Hilfe
+  { id:'health', label:{de:'Medizin & Hilfe', en:'Medical & Help'},
+    areas:['MedPoint','Sozialerdienst','VWG1','VWG2','VWG3'] }, // 
 
-  function highlightPin(id) {
-    if (highlightedPinId) {
-      const prev = document.getElementById(`pin-${highlightedPinId}`);
-      if (prev) prev.classList.remove('highlight');
-    }
-    const el = document.getElementById(`pin-${id}`);
-    if (el) {
-      el.classList.add('highlight');
-      highlightedPinId = id;
-    }
+  // Services / Info
+  { id:'services', label:{de:'Service & Info', en:'Services & Info'},areas: ['Begleitdienst', 'Bistro', 'Checkin', 'Infopoint', 'Kleiderkammer', 'Post', 'Sprachmittlung', 'Waschsalon'] },
+
+  // Gelände / Orientierung
+  { id:'site', label:{de:'Gelände', en:'Site'},
+    areas:['Q','Krähenwald','WS','Bus','H'] }
+];
+
+  let lastFocusId = null;        // z.B. 'MedPoint'
+let highlightedPinId = null;
+
+function highlightPin(id) {
+  // altes Highlight entfernen
+  if (highlightedPinId) {
+    const prev = document.getElementById(`pin-${highlightedPinId}`);
+    if (prev) prev.classList.remove('highlight');
   }
-
-  function clearHighlight() {
-    if (!highlightedPinId) return;
-    const el = document.getElementById(`pin-${highlightedPinId}`);
-    if (el) el.classList.remove('highlight');
-    highlightedPinId = null;
+  // neues setzen
+  const el = document.getElementById(`pin-${id}`);
+  if (el) {
+    el.classList.add('highlight');
+    highlightedPinId = id;
   }
+}
 
-  const aliases = { med: 'MedPoint', medpoint: 'MedPoint', 'med point':'MedPoint' };
-  function resolveId(id) {
-    if (!id) return id;
-    const key = String(id).toLowerCase();
-    return aliases[key] || id;
-  }
+function clearHighlight() {
+  if (!highlightedPinId) return;
+  const el = document.getElementById(`pin-${highlightedPinId}`);
+  if (el) el.classList.remove('highlight');
+  highlightedPinId = null;
+}
+
+// (optional) Alias-Auflösung, falls mal "med" statt "MedPoint" übergeben wird
+const aliases = { med: 'MedPoint', medpoint: 'MedPoint', 'med point':'MedPoint' };
+function resolveId(id) {
+  if (!id) return id;
+  const key = String(id).toLowerCase();
+  return aliases[key] || id;
+}
+
+
 
   function render(){
     const chips = document.getElementById('chips'); chips.innerHTML='';
@@ -357,63 +411,60 @@
     });
     renderList(categories.flatMap(c=>c.areas));
   }
+function renderList(areaIds){
+  const list = document.getElementById('list'); 
+  list.innerHTML = '';
 
-  function renderList(areaIds){
-    const list = document.getElementById('list'); 
-    list.innerHTML = '';
+  areaIds.forEach(id => {
+    const data = translations[id]?.[currentLang]; 
+    if (!data) return;
 
-    areaIds.forEach(id => {
-      const data = translations[id]?.[currentLang]; 
-      if (!data) return;
+    const card = document.createElement('div'); 
+    card.className = 'card';
+    if (id === lastFocusId) card.classList.add('selected'); // << neu
 
-      const card = document.createElement('div'); 
-      card.className = 'card';
-      if (id === lastFocusId) card.classList.add('selected');
+    const icon = document.createElement('img'); 
+    icon.src = `icons/${id}Icon.png`; 
+    icon.alt = id; 
+    icon.style.width = '52px'; 
+    icon.style.height = '52px';
 
-      const icon = document.createElement('img'); 
-      icon.src = `icons/${id}Icon.png`; 
-      icon.alt = id; 
-      icon.style.width = '52px'; 
-      icon.style.height = '52px';
+    const body = document.createElement('div');
+    const h = document.createElement('h3'); h.textContent = data.title || id;
+    const meta = document.createElement('div'); meta.className = 'meta'; meta.innerHTML = data.time || '';
+    const txt = document.createElement('div'); txt.className = 'meta'; txt.innerHTML = data.text || '';
 
-      const body = document.createElement('div');
-      const h = document.createElement('h3'); h.textContent = data.title || id;
-      const meta = document.createElement('div'); meta.className = 'meta'; meta.innerHTML = data.time || '';
-      const txt = document.createElement('div'); txt.className = 'meta'; txt.innerHTML = data.text || '';
+    const actions = document.createElement('div'); actions.className = 'actions';
+    const btn1 = document.createElement('button'); btn1.className = 'btn'; btn1.textContent = 'Details';
+    btn1.onclick = (e) => { e.stopPropagation(); lastFocusId = id; openSheet(id); }; // << gemerkt
 
-      const actions = document.createElement('div'); actions.className = 'actions';
-      const btn1 = document.createElement('button'); btn1.className = 'btn'; btn1.textContent = 'Details';
-      btn1.onclick = (e) => { e.stopPropagation(); lastFocusId = id; openSheet(id); };
+    const btn2 = document.createElement('button'); btn2.className = 'btn ghost'; btn2.textContent = 'Auf Karte zeigen';
+    btn2.onclick = (e) => { e.stopPropagation(); lastFocusId = id; showMap(id); }; // << neu: direkt mit ID
 
-      const btn2 = document.createElement('button'); btn2.className = 'btn ghost'; btn2.textContent = 'Auf Karte zeigen';
-      btn2.onclick = (e) => { 
-        e.stopPropagation(); 
-        lastFocusId = id; 
-        showMap(); 
-        highlightPin(id); 
-      };
+    actions.append(btn1, btn2);
+    body.append(h, meta, txt, actions);
+    card.append(icon, body);
+    list.appendChild(card);
 
-      actions.append(btn1, btn2);
-      body.append(h, meta, txt, actions);
-      card.append(icon, body);
-      list.appendChild(card);
-
-      card.addEventListener('click', () => {
-        lastFocusId = id;
-        document.querySelectorAll('.card.selected').forEach(el => el.classList.remove('selected'));
-        card.classList.add('selected');
-      });
-    });
-  }
-
-  document.querySelectorAll('.pin').forEach(el => {
-    el.addEventListener('click', () => {
-      const id = el.id.replace('pin-','');
+    // Klick auf die Karte selbst markiert die Auswahl (für späteren Tab-Wechsel auf "Karte")
+    card.addEventListener('click', () => {
       lastFocusId = id;
-      highlightPin(id);
-      openSheet(id);
+      // optisch updaten
+      document.querySelectorAll('.card.selected').forEach(el => el.classList.remove('selected'));
+      card.classList.add('selected');
     });
   });
+}
+
+  document.querySelectorAll('.pin').forEach(el => {
+  el.addEventListener('click', () => {
+    const id = el.id.replace('pin-','');
+    lastFocusId = id;
+    highlightPin(id);
+    openSheet(id);
+  });
+});
+
 
   function openSheet(id){
     const d=translations[id]?.[currentLang]; if(!d) return;
@@ -430,7 +481,40 @@
   }
   function closeSheet(){ document.getElementById('sheet').classList.remove('open'); }
 
+  /* ====== Pin-Fokus ====== */
+
+
+  // Pin-Mitte in Kartenkoordinaten (px) berechnen – anhand der % im style
+function getPinCenter(id){
+  const el = document.getElementById(`pin-${id}`);
+  if (!el) return null;
+  const leftPct = parseFloat(el.style.left);
+  const topPct  = parseFloat(el.style.top);
+  const pinWidthPct = 3.05; // wie im CSS .pin { width: 3.05% }
+  const cx = (leftPct + pinWidthPct * 0.5) / 100 * MAP_W;
+  const cy = (topPct) / 100 * MAP_H;
+  return { cx, cy };
+}
+
   /* ====== Start ====== */
   render();
   showList(); // immer mit Liste starten
 </script>
+</body>
+</html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
