--- a/App Interaktive Karte/index.html
+++ b/App Interaktive Karte/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+das ist der jetztige code. Wir fokussieren uns bitte nur auf die panzoom funktion. <!DOCTYPE html>
 <html lang="de">
 <head>
 <meta charset="utf-8" />
@@ -519,9 +519,6 @@ function getPinCenter(id){
 </script>
 </body>
 </html>
-
-
-
 
 
 
