--- a/App Interaktive Karte/index.html
+++ b/App Interaktive Karte/index.html
@@ -1,4 +1,4 @@
-das ist der jetztige code. Wir fokussieren uns bitte nur auf die panzoom funktion. <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="de">
 <head>
 <meta charset="utf-8" />
@@ -529,6 +529,7 @@ function getPinCenter(id){
 </script>
 </body>
 </html>
+
 
 
 
