--- a/App Interaktive Karte/index.html
+++ b/App Interaktive Karte/index.html
@@ -287,6 +287,7 @@
 
 <script src="translations.js"></script>
 <script src="https://unpkg.com/@panzoom/panzoom/dist/panzoom.min.js"></script>
+<script>
 
   /* ====== STATE & SETTINGS ====== */
   let currentLang = 'de';
@@ -660,6 +661,7 @@ function getPinCenter(id) {
 </script>
 </body>
 </html>
+
 
 
 
