--- a/App Interaktive Karte/index.html
+++ b/App Interaktive Karte/index.html
@@ -288,6 +288,7 @@
 <script src="translations.js"></script>
 <script src="https://unpkg.com/@panzoom/panzoom/dist/panzoom.min.js"></script>
 <script>
+</script>
 
   /* ====== STATE & SETTINGS ====== */
   let currentLang = 'de';
@@ -661,6 +662,7 @@ function getPinCenter(id) {
 </script>
 </body>
 </html>
+
 
 
 
